--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,62 @@
 html,
 body {
-    margin: 0;
-    padding: 0;
-    text-align: center;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
 
 main {
-    width: 100vw;
-    height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  background-image: url(../img/simcity.jpg);
+  /* background-attachment: fixed; */
+  background-size: cover;
+  /* background-color: aquamarine; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#gameboard {
+  width: 200px;
+  height: 400px;
+  background-color: black;
+  display: flex;
+  text-align: center;
+  border-radius: 15px;
+}
+#timer {
+  text-align: center;
+  color: rgb(37, 88, 29);
+  margin-left: 75%;
+  margin-top: 30px;
+  font-size: 22px;
+}
+
+#wires {
+  display: flex;
+  text-align: center;
+  margin-left: -52px;
+}
+
+img {
+  align-self: center;
+  height: 230px;
+  width: 50%;
+  align-items: center;
+  /* justify-content: center; */
+  margin-left: 8px;
+  flex-direction: row;
+  border-radius: 5px;
+}
+
+#resetButton {
+  width: 150px;
+  align-self: center;
+  justify-self: center;
+  text-align: center;
+  margin-left: -53%;
+  margin-top: 235%;
+  border: none;
+  border-radius: 3px;
 }
